# loop_invariant_generation

./: .gitignore  README.md  loop_invariant_generation.code-workspace
RLInv/: .gitignore  README.md  UltimateCounterExample.errorpath  pyproject.toml
RLInv/archive-code/: baseline.py  equivalence.py  evaluate.py  experiment.py  metrics.py
RLInv/configs/: config.yml  ds_zero3.json  global_configurations.py  train_sft_config.yaml
RLInv/configs/models_configs/: hf_eval.json  oss_exp_full.json  oss_test.json
RLInv/dataset/evaluation/: problem.c  stats.txt
RLInv/dataset/evaluation/easy/: baseline_metadata.json  baseline_timing.csv  baseline_timing.json
RLInv/dataset/evaluation/easy/c/: prodbin-ll_unwindbound1_2.c
RLInv/dataset/evaluation/easy/yml/: bresenham-ll_valuebound50_1.yml  brs2f_1.yml  cohencu-ll_unwindbound5_9.yml  cohencu-ll_valuebound10_10.yml  cohencu-ll_valuebound1_2.yml  cohencu-ll_valuebound20_5.yml  cohencu-ll_valuebound5_2.yml  cohendiv-ll_unwindbound100_2.yml  cohendiv-ll_unwindbound10_5.yml  cohendiv-ll_unwindbound5_4.yml  condmf_1.yml  dijkstra-u_valuebound2_1.yml  dijkstra-u_valuebound2_2.yml  dll-rb-cnstr_1-2_3.yml  egcd2-ll_valuebound1_6.yml  egcd2-ll_valuebound2_4.yml  egcd2-ll_valuebound50_2.yml  egcd2_3.yml  egcd3-ll_unwindbound50_4.yml  egcd3-ll_unwindbound5_3.yml  ps4-ll_2.yml  (+22 more)
RLInv/dataset/evaluation/full/: baseline_metadata.json  baseline_timing.csv  baseline_timing_new.json  baseline_timing_old_format.json
RLInv/dataset/evaluation/hard/: baseline_results.json  baseline_timing.csv  baseline_timing.json
RLInv/dataset/evaluation/single/: baseline_metadata.json  baseline_timing.json
RLInv/dataset/evaluation/unknowns/: unknown_timing.csv  unknown_timing.json
RLInv/dataset/old/: old_timing.json  timing.csv  timing.json
RLInv/dataset/old/easy/: baseline_results.json
RLInv/dataset/old/hard/: baseline_metadata.json  baseline_results.json  groups.txt
RLInv/dataset/training/: invariants.json  timing.json  train_data.jsonl
RLInv/docs/: BASELINE_USAGE.md  DETERMINISM_GUIDE.md  TODO.md
RLInv/nbs/: basic_eda.ipynb  timing_comparison.ipynb  train_sft.ipynb
RLInv/scripts/: README.md  build_dataset.sh  capture_training_baseline.py  filter_invariants.py  filter_training_data.py  run.sh  run_baseline.sh  run_baseline_full.sh  run_capture_training_baseline.sh  run_evaluate_self_gen_invs.sh  run_evaluation.sh  run_experiment.sh  run_full_exp.sh  run_my_exp.sh  run_new_baseline.sh  run_train_baseline.sh  split_full_to_easy_hard.py
RLInv/src/eval/: __init__.py  baseline.py  config.py  data.py  decision_procedure.py  decision_procedure_report.py  evaluate.py  evaluate_hf.py  evaluate_multiple_models.py  evaluate_self_gen_invs.py  experiment.py  metrics.py  model.py
RLInv/src/eval/models/: hf_model.py  model.py  model_utils.py  openai_responses_model.py
RLInv/src/exps/: verify_uautomizer_invariants_usefullness.py
RLInv/src/preprocess/: filter_invariants.py
RLInv/src/train/: README.md  sft_trainer_example.py  train.py  train_sft.py
RLInv/src/utils/: __init__.py  baseline_utils.py  clean_train_data.py  create_train_data_for_sft.py  generate_yml_files.py  get_baseline.py  paths.py  plain_verifier.py  pp_train.py  preprocess_training_dataset.py  program.py  program_new.py  prompt_utils.py  prompter.py  rewriter.py  task.py  train_baseline_with_gt_invariants.py  utils.py  verifier.py
RLInv/tests/: test_check_equivalence.py  test_rewrite_and_program.py  test_uautomizer_timing_determinism.py
(+206 files in other folders)
